# atlas-design-pattern-oktober-2025

./: .gitignore  README.md
SimpleIterator/: CMakeLists.txt  main.cpp
Tag02Composite/: CMakeLists.txt  main.cpp
Tag02Composite/composite/: AbstractNode.h  Leaf.h  Node.h
Tag1_02Singleton/: CMakeLists.txt  Singleton.h
Tag1_03FlyWeight/: AttributedCharacter.h  CMakeLists.txt  main.cpp
Tag1_04Visitor/: CMakeLists.txt  main.cpp
Tag1_04Visitor/firma/: Firma.h
Tag1_04Visitor/mitarbeiter/: AbstractMitarbeiter.h  GehaltsEmpfaenger.h  LohnEmpfaenger.h
Tag1_04Visitor/mitarbeiter/visitor/: AbstractMitarbeiterVisitor.h  MitarbeiterVisitor.h  PrintVisitor.h  ResetArbeitszeitVisitor.h  StatistikVisitor.h
Tag1_05State/: Business.cpp  Business.h  CMakeLists.txt  main.cpp
Tag1_06TrafficLight/: CMakeLists.txt
Tag1_06TrafficLight#/: CMakeLists.txt  main.cpp
Tag1_Dekorator/: CMakeLists.txt  main.cpp
Tag2_01Observer/: CMakeLists.txt  main.cpp
Tag2_02Command/: CMakeLists.txt  main.cpp
Tag2_02Command/command/: AbstractCommand.h  AbstractQuery.h  AddCommand.h  ClearCommand.h  Command.h  CommandFactory.h  CommandHistory.h  PrintCommand.h  SubCommand.h
Tag2_02Command/math/: Calculator.h  CalculatorMemento.h
Tag2_03Memento/: CMakeLists.txt  main.cpp
Tag2_04Template/: CMakeLists.txt  main.cpp
Tag2_04Template/processor/: AbstractCounter.h  AbstractFileprocessor.h  CharacterCounter.h  CharacterHandler.h  FileProcessor.h  LineCounter.h
Tag3_01/: CMakeLists.txt  main.cpp
Tag3_03Bank/: CMakeLists.txt  main.cpp
Tag3_04Builder/: CMakeLists.txt  Person.h  main.cpp
(+33 files in other folders)
